# ComfyUI-Whisper

./: LICENSE  __init__.py  add_subtitles_to_background.py  add_subtitles_to_frames.py  add_subtitles_to_frames_x.py  apply_whisper.py  apply_whisper_x.py  pyproject.toml  readme.md  readme.zh_cn.md  requirements.txt  resize_cropped_subtitles.py  save_srt.py  utils.py
example_workflows/: video_translation_subtitles_workflow.json  whisper_video_subtitles_workflow.json
