[project]
name = "comfyui-whisper"
description = "Transcribe audio and add subtitles to videos using Whisper in ComfyUI"
version = "1.0.0"
license = "LICENSE"
dependencies = ["openai-whisper", "pillow", "uuid"]

[project.urls]
Repository = "https://github.com/yuvraj108c/ComfyUI-Whisper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Whisper"
Icon = ""
